# cg_labs

./: .gitignore  README.md
circle/: CMakeLists.txt  compile_project.sh  config.sh  demo  main.cpp
circle/include/glad/: glad.h
circle/shader/: Shader.h  shader.vs
lab0/: Dockerfile  README.md  glad.c  make.sh  run.bat  triangle.cpp
lab1/: CMakeLists.txt  circle  compile_project.sh  config.sh  lab1.md  main.cpp  run.bat
lab1/include/: Shader.h  algorithm.hpp  buffer_screen.hpp  point.hpp
lab1/shader/: Shader.cpp  shader.fs
lab1/utils/: glad.c
lab2/: imgui.ini  lab2.md  lab2.sln  lab2.vcxproj  lab2.vcxproj.filters
lab2/Debug/: vc143.idb
lab2/Debug/lab2.tlog/: CL.command.1.tlog  lab2.lastbuildstate
lab2/include/glad/: glad.h
lab2/src/: main.cpp
lab2/src/geometry/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  half-edge.h
lab2/src/manager/: InputManager.h  Key.h
lab2/src/utils/: Camera.cpp  Camera.h  GUI.h  Utils.cpp
lab2_release/: imgui.ini  lab2.aps  lab2.md  lab2.vcxproj  lab2.vcxproj.filters  resource.h
lab2_release/shader/: shader.fs  shader.vs
lab2_release/src/: main.cpp
lab2_release/src/geometry/: Model.cpp  Model.h  half-edge.h
lab2_release/src/manager/: InputManager.cpp
lab2_release/src/utils/: Utils.h  global.h
lab3/: README.md  README_end.md  lab3 instruction.md  lab3.sln  lab3.vcxproj  lab3.vcxproj.filters  lab3_zh.md  out.ppm
lab3/lib/: assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
lab3/src/: Camera.cpp  Camera.h  Material.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  aliase.h  hittable.cpp  hittable.h  hittablecpp.cpp  main.cpp
